src/corelib/kernel/qproperty_p.h
@@ -586,13 +586,17 @@ private:
 
 #define QT_OBJECT_COMPAT_PROPERTY_4(Class, Type, name,  setter) \
     static constexpr size_t _qt_property_##name##_offset() { \
+        QT_WARNING_PUSH QT_WARNING_DISABLE_INVALID_OFFSETOF \
         return offsetof(Class, name); \
+        QT_WARNING_POP \
     } \
     QObjectCompatProperty<Class, Type, Class::_qt_property_##name##_offset, setter> name;
 
 #define QT_OBJECT_COMPAT_PROPERTY_5(Class, Type, name,  setter, signal) \
     static constexpr size_t _qt_property_##name##_offset() { \
+        QT_WARNING_PUSH QT_WARNING_DISABLE_INVALID_OFFSETOF \
         return offsetof(Class, name); \
+        QT_WARNING_POP \
     } \
     QObjectCompatProperty<Class, Type, Class::_qt_property_##name##_offset, setter, signal> name;
 
@@ -603,7 +607,9 @@ private:
 
 #define QT_OBJECT_COMPAT_PROPERTY_WITH_ARGS_5(Class, Type, name,  setter, value) \
     static constexpr size_t _qt_property_##name##_offset() { \
+        QT_WARNING_PUSH QT_WARNING_DISABLE_INVALID_OFFSETOF \
         return offsetof(Class, name); \
+        QT_WARNING_POP \
     } \
     QObjectCompatProperty<Class, Type, Class::_qt_property_##name##_offset, setter> name =         \
             QObjectCompatProperty<Class, Type, Class::_qt_property_##name##_offset, setter>(       \
@@ -611,7 +617,9 @@ private:
 
 #define QT_OBJECT_COMPAT_PROPERTY_WITH_ARGS_6(Class, Type, name, setter, signal, value) \
     static constexpr size_t _qt_property_##name##_offset() { \
+        QT_WARNING_PUSH QT_WARNING_DISABLE_INVALID_OFFSETOF \
         return offsetof(Class, name); \
+        QT_WARNING_POP \
     } \
     QObjectCompatProperty<Class, Type, Class::_qt_property_##name##_offset, setter, signal> name = \
             QObjectCompatProperty<Class, Type, Class::_qt_property_##name##_offset, setter,        \
